<resources>
    <string name="app_name">WeTune</string>

    <string name="API_BASE_URL">https://chaton.ga/api</string>

    <string name="PREFERENCE_FILE">ChatOnPref</string>

    <string name="signUp">Sign up</string>
    <string name="logIn">Log in</string>
    <string name="logOut">Log out</string>
    <string name="chat">Chat</string>
    <string name="try_again">Try again</string>

    <string name="reg">Register</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="search_friend">Search friend</string>
    <string name="send">Send</string>
    <string name="me">Me</string>
    <string name="yesterday">yesterday</string>

    <string name="hintMess">Message...</string>
    <string name="hintPass">Password?</string>

    <string name="error_pass">Invalid password</string>
    <string name="error_user">User with this email does not exist</string>
    <string name="error_empty">Please fill all fields</string>
    <string name="error_connection">Check your internet connection</string>
    <string name="error_oops">Oops, something went wrong. Please, try again</string>
    <string name="error_data_uploading">There were some troubles with data uploading.\nCheck your network connection</string>

    <string name="no_mess">Start conversation with this user right now</string>

    <string name="progress">Loading data</string>
</resources>
