<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="40dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.07" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="522dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.92" />

    <android.support.v7.widget.RecyclerView
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorLightGray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        android:id="@+id/chatView">

    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/chatView"
        app:layout_constraintBottom_toBottomOf="@+id/chatView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        android:background="@color/colorWhite"
        android:weightSum="1">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:text="@string/hintMess"
            android:background="@color/colorWhite"
            android:ems="10"
            android:tag="not_edited"
            android:id="@+id/messInput"
            android:layout_weight="0.74"
            android:textColor="@color/colorHint"
            android:textSize="13sp"
            android:layout_margin="8dp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_attach"
            android:background="@color/transparent"
            android:id="@+id/btnAttach"
            android:layout_weight="0.127"
            android:padding="12dp"
            android:adjustViewBounds="false"
            android:scaleType="fitCenter"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.003"
            android:background="@color/colorLightGray"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp" />

        <Button
            android:text="@string/send"
            android:textColor="@color/colorDarkGray"
            android:background="@color/transparent"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_weight="0.13"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnSend"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />
    </LinearLayout>

    <TextView
        android:text="@string/chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvChat"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_friend_list"
        android:background="@color/transparent"
        android:id="@+id/btnFriendsList"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.49"
        app:layout_constraintBottom_toTopOf="@+id/chatView"
        android:layout_marginBottom="8dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@drawable/settings"
        android:tint="@color/colorWhite"
        android:background="@color/transparent"
        android:id="@+id/btnConfig"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintBottom_toBottomOf="@+id/tvChat"
        app:layout_constraintTop_toTopOf="@+id/tvChat" />

</android.support.constraint.ConstraintLayout>